--- a/AirportManagement.SPA/package.json
+++ b/AirportManagement.SPA/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "alertify": "^0.3.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
