--- a/AirportManagement.API/AirportManagement.API/AirportManagement.API.csproj
+++ b/AirportManagement.API/AirportManagement.API/AirportManagement.API.csproj
@@ -45,6 +45,7 @@
     <None Remove="Data\Services\Airline\" />
     <None Remove="Data\Services\Airport\" />
     <None Remove="Data\Services\Baggage\" />
+    <None Remove="Data\Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -54,5 +55,6 @@
     <Folder Include="Data\Services\Airport\" />
     <Folder Include="Data\Services\Passanger\" />
     <Folder Include="Data\Services\Baggage\" />
+    <Folder Include="Data\Helpers\" />
   </ItemGroup>
 </Project>
